added some more css properties

--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,6 @@
     <meta name="author" content="Anthony Shoshi Gomes">
     <title>Anthonian Sportswear - Contact</title>
     <link rel="icon" type="image/png" href="./img/favicon.png">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./css/style.css" type="text/css">
 </head>
 
@@ -20,7 +19,7 @@
             <img class="logo" src="./img/logo.png" alt="website logo" title="Anthonian Sportswear">
         </a>
         <h1>Anthonian Sportswear</h1>
-        <h2>Innovation has a meaning!</h2>
+        <h2><em>Innovation has a meaning!</em></h2>
     </header>
     <nav>
         <input type="checkbox" id="check">
@@ -57,7 +56,7 @@
                     <li>Thursday 7:30am - 10:30pm </li>
                     <li>Friday 7:30am - 6:30pm</li>
                     <li>Saturday Closed </li>
-                    </li>
+                    
                 </ul>
             </section>
             <section class="row">
@@ -67,17 +66,17 @@
                             <legend>Contact Us if you have any question:</legend>
                             <section class="row">
                                 <section class="column">
-                                    <label for="fname">Name</label>
-                                    <input type="text" name="name" required>
+                                    <label for="name">Name</label>
+                                    <input type="text" id="name" name="name" required>
                                 </section>
                                 <section class="column">
                                     <label for="email">Email</label>
-                                    <input type="email" name="email" required>
+                                    <input type="email" id="email" name="email" required>
                                 </section>
                             </section>
                             <section class="column">
-                                <label for="fname">Message</label>
-                                <textarea name="message" rows="10" required></textarea>
+                                <label for="message">Message</label>
+                                <textarea name="message" id="message" rows="10" required></textarea>
                             </section>
                             <section class="column">
                                 <input type="submit" value="Submit">
