--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <meta name="author" content="Anthony Shoshi Gomes">
     <title>Anthonian Sportswear</title>
     <link rel="icon" type="image/png" href="./img/favicon.png">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./css/style.css" type="text/css">
 </head>
 
@@ -20,7 +19,7 @@
             <img class="logo" src="./img/logo.png" alt="website logo" title="Anthonian Sportswear">
         </a>
         <h1>Anthonian Sportswear</h1>
-        <h2>Innovation has a meaning!</h2>
+        <h2><em>Innovation has a meaning!</em></h2>
     </header>
     <nav>
         <input type="checkbox" id="check">
@@ -109,7 +108,7 @@
                         <p>
                             Have you ever watched a sports game and been confused by the slang being thrown around by
                             the
-                            observers? If so, you ’re surely not alone. numerous sports suckers do n’t understand the
+                            observers? If so, you ’re surely not alone. numerous sports suckers don’t understand the
                             slang
                             used
                             by
@@ -184,13 +183,13 @@
                     </article>
                 </section>
                 <aside id="upcoming-routes">
-                    <h2>5 upcoming routes</h2>
+                    <h2>Top sports places you should visit</h2>
                     <ol>
-                        <li>Route Route Route Route Route Route Route Route Route Route Route Route</li>
-                        <li>Route 2</li>
-                        <li>Route 3</li>
-                        <li>Route 4</li>
-                        <li>Route 5</li>
+                        <li>Barcelona, Spain for LaLiga</li>
+                        <li>London, England for cricket at Lords Stadium</li>
+                        <li>Tokyo, Japan to for Baseball</li>
+                        <li>New York, USA for NFL</li>
+                        <li>Haryana, India for Wrestling</li>
                     </ol>
                 </aside>
             </section>
