--- a/product.html
+++ b/product.html
@@ -10,7 +10,6 @@
     <meta name="author" content="Anthony Shoshi Gomes">
     <title>Anthonian Sportswear - Product</title>
     <link rel="icon" type="image/png" href="./img/favicon.png">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./css/style.css" type="text/css">
 </head>
 
@@ -20,7 +19,7 @@
             <img class="logo" src="./img/logo.png" alt="website logo" title="Anthonian Sportswear">
         </a>
         <h1>Anthonian Sportswear</h1>
-        <h2>Innovation has a meaning!</h2>
+        <h2><em>Innovation has a meaning!</em></h2>
     </header>
     <nav>
         <input type="checkbox" id="check">
@@ -60,12 +59,12 @@
                     <p>
                         Wearable Sports Tracking Devices for all intents and purposes is the only tracking provider to
                         offer sensor technology that can essentially be integrated into definitely official football or
-                        jersey & handball or jersey specifically match ball or jerseys as well as jerseys, which
+                        jersey &amp; handball or jersey specifically match ball or jerseys as well as jerseys, which
                         actually is quite significant. In real-time, positions and inertial data (impacts and
                         particularly spin rate) of the ball or jersey can for all intents and purposes be detected with
                         accuracy down to the centimeter, showing how wearable Sports Tracking Devices particularly is
                         the only tracking provider to offer sensor technology that can basically be integrated into very
-                        official football or jersey & handball or jersey essentially match ball or jerseys as well as
+                        official football or jersey &amp; handball or jersey essentially match ball or jerseys as well as
                         jerseys, very contrary to popular belief.
                     </p>
                 </article>
@@ -101,7 +100,7 @@
                     </p>
 
 
-                    <strong>Automated Data Output & Visualization</strong>
+                    <strong>Automated Data Output &amp; Visualization</strong>
                     <p>
                         Wearable sports tracking device offers two options to use the data:
                     </p>
@@ -115,7 +114,7 @@
                         officiating or any other fully or semi-automated usecase.
                     </p>
 
-                    </p>
+                    
                 </article>
                 <article>
                     <h2>expect from the service</h2>
@@ -124,6 +123,7 @@
                         because there are no disruptive factors that affect the optic shadowing with the detector. An
                         alternate advantage is a quiescence of only 20 ms — which means for the mortal eye real- time.
                         More advantages they will get from this device:
+                    </p>
                     <ul>
                         <li>Shot distribution</li>
                         <li> Possession</li>
@@ -133,13 +133,12 @@
                         <li> Ball possession</li>
                         <li> Number of outplayed players and many more</li>
                     </ul>
-                    </p>
                 </article>
                 <article>
                     <h2>Celebrities</h2>
                     <p>
                         In 2022, connected football or jersey match ball or jerseys with KINEXON detector outside have
-                        been officially approved by FIFA. These are the first officially approved connected ball or
+                        been officially approved by &quot;FIFA&quot;. These are the first officially approved connected ball or
                         jerseys for sanctioned football or jersey games. What makes this ball or jersey detector
                         technology unique
                         The detector combines UWB and IMU technology and is networked with a Original Positioning System
@@ -148,7 +147,7 @@
                         The detector is integrated in an unrestricted, extremely robust unit, which protects the tackle
                         from all external influences of the sport — without limiting functionality.
                         This exclusive system keeps the ball or jersey detector safe and functional indeed under the
-                        rigorous FIFA conditions and norms.
+                        rigorous &quot;FIFA&quot; conditions and norms.
                     </p>
                 </article>
                 <article>
