--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <main>
         <section class="promo-movie">
             <video autoplay>
-                <source src="./video/promo-pc.mp4" type="video/mp4">
+                <source src="./video/promo-mobile.mp4" type="video/mp4">
                 <source src="./video/promo-audio.ogg" type="video/ogg">
                 Your browser does not support HTML5 video.
             </video>
@@ -195,7 +195,14 @@
             </section>
         </section>
         <section class="cookie">
-            Cookie statement
+            <strong>
+                This website uses cookies
+            </strong>
+            <p>
+                We use cookies to personalise content and ads, to provide social media features and to analyse our
+                traffic.
+            </p>
+            <button class="cookie-btn">Allow All</button>
         </section>
         <footer class="footer">
             <p>
