--- a/pricing.html
+++ b/pricing.html
@@ -43,28 +43,28 @@
     </nav>
     <main id="pricing-page">
         <section class="column">
-            <section class="row">
-                <section class="column">
-                    <section id="pricing-table">
-                        <section>
-                            <article>
-                                <header>
-                                    <strong>Future of Technology in Sports</strong>
-                                </header>
-                                <p>
-                                    There isn't any doubt that generation will preserve powering all elements of sports
-                                    activities. Still, the decentralized generation, especially because of the super
-                                    ability for fan engagement and monetization, is possible to play a key function
-                                    withinside the improvement of the sports activities enterprise withinside the
-                                    subsequent decade.
+            <section class="article-overview">
+                <article>
+                    <header>
+                        <strong>Future of Technology in Sports</strong>
+                    </header>
+                    <p>
+                        There isn't any doubt that generation will preserve powering all elements of sports
+                        activities. Still, the decentralized generation, especially because of the super
+                        ability for fan engagement and monetization, is possible to play a key function
+                        withinside the improvement of the sports activities enterprise withinside the
+                        subsequent decade.
 
-                                    Paired with different new technology created to trap customers to eat services and
-                                    products coming from their preferred groups, it may come to be one of the essential
-                                    opportunity sales paths for sports activities groups and gamers withinside the close
-                                    to future.
-                                </p>
-                            </article>
-                        </section>
+                        Paired with different new technology created to trap customers to eat services and
+                        products coming from their preferred groups, it may come to be one of the essential
+                        opportunity sales paths for sports activities groups and gamers withinside the close
+                        to future.
+                    </p>
+                </article>
+            </section>
+            <section class="row">
+                <section class="column" id="pricing-coloumn">                    
+                    <section id="pricing-table">
                         <table>
                             <thead>
                                 <tr>
@@ -540,7 +540,14 @@
             </section>
         </section>
         <section class="cookie">
-            Cookie statement
+            <strong>
+                This website uses cookies
+            </strong>
+            <p>
+                We use cookies to personalise content and ads, to provide social media features and to analyse our
+                traffic.
+            </p>
+            <button class="cookie-btn">Allow All</button>
         </section>
         <footer class="footer">
             <p>
