--- a/product.html
+++ b/product.html
@@ -185,7 +185,14 @@
             </aside>
         </section>
         <section class="cookie">
-            Cookie statement
+            <strong>
+                This website uses cookies
+            </strong>
+            <p>
+                We use cookies to personalise content and ads, to provide social media features and to analyse our
+                traffic.
+            </p>
+            <button class="cookie-btn">Allow All</button>
         </section>
         <footer class="footer">
             <p>
