--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <main>
         <section class="promo-movie">
             <video autoplay>
-                <source src="./video/promo-mobile.mp4" type="video/mp4">
+                <source src="./video/promo.mp4" type="video/mp4">
                 <source src="./video/promo-audio.ogg" type="video/ogg">
                 Your browser does not support HTML5 video.
             </video>
